--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
   <title> About me | 完成比完美更重要ฅ•ω•ฅ</title>
   <link rel="canonical" href="https://rivenrai.github.io/about/" />
   
-  <meta name="description" content="Hugo is a general-purpose website framework. Technically speaking, Hugo is a static site generator. Unlike systems that dynamically build a page with each visitor request, Hugo builds pages when you create or update your content. Since websites are viewed far more often than they are edited, Hugo is designed to provide an optimal viewing experience for your website’s end users and an ideal writing experience for website authors." />
+  <meta name="description" content="隨手筆記" />
   
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="all,follow" />
